[package]
name = "system-image-loader"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.0.8", features = ["derive"] }
ctrlc = "3.2.2"
regex = "1.6.0"
semver = "1.0.12"
serde = "1.0.139"
serde_derive = "1.0.139"
toml = "0.8.0"
